GNOME Bugzilla – Bug 772672
crash in gtd-panel-scheduled.c
Last modified: 2016-10-10 14:59:25 UTC
After scheduling a task, gnome-todo will crash on i386 machines with the below stack trace. Thread 1 "gnome-todo" received signal SIGSEGV, Segmentation fault. __strchr_sse2_bsf () at ../sysdeps/i386/i686/multiarch/strchr-sse2-bsf.S:60 60 ../sysdeps/i386/i686/multiarch/strchr-sse2-bsf.S: No such file or directory. (gdb) bt
+ Trace 236732
Created attachment 337294 [details] [review] pass-xalign-as-float.patch This patch fixes it. The problem is that the "xalign" property is being passed as an int when it should be a float/double. x86-64 gets away with it, but it crashes on i386.
Thanks for the quick fix!