panel-scheduled: pass xalign as float

Pass the "xalign" property to g_object_new as a float instead of an int
so it matches the property definition.  Passing it as an int crashes
i386 machines.

https://bugzilla.gnome.org/show_bug.cgi?id=772672